--- a/plan/templates/plan/new_post.html
+++ b/plan/templates/plan/new_post.html
@@ -2,4 +2,6 @@
 <form method='POST' enctype='multipart/form-data'>
         {% csrf_token %}
         {{ form.as_p }}
-<input type="submit" value="Добавить">
+<button class="btn btn-primary" type="submit">
+        Добавить
+</button>
