--- a/plan/templates/plan/index.html
+++ b/plan/templates/plan/index.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<form method="get">
-            <h4>Фильтрация</h4>
+        <form method="get">
+        <h4>Фильтрация</h4>
             {{ myFilter.form.as_p }}
             <br>
             <button class="btn btn-primary" type="submit">
                 Search
             </button>
-            {% include "plan/new_post.html" %}
+
         </form>
-        <table class="table table-dark">
+{% include "plan/new_post.html" %}
+        <table class="table">
             <thead>
                 <tr>
                     <th scope="col">Название</th>
